feat: permanent cloud storage for profile images using Cloudinary