@@ -10,25 +10,20 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class UserService {
 
     private final UserRepository repository;
     private final PasswordEncoder passwordEncoder;
+    private final CloudinaryService cloudinaryService;
 
-    public UserService(UserRepository repository, PasswordEncoder passwordEncoder) {
+    public UserService(UserRepository repository, PasswordEncoder passwordEncoder, CloudinaryService cloudinaryService) {
         this.repository = repository;
         this.passwordEncoder = passwordEncoder;
+        this.cloudinaryService = cloudinaryService;
     }
 
     public User getUserInfo(User user) {
@@ -89,50 +84,21 @@ public class UserService {
 
     @Transactional
     public String saveAvatar(User user, MultipartFile file) {
-        try {
-            String fileName = "u_" + user.getId() + "_" + UUID.randomUUID().toString() + "_" + file.getOriginalFilename();
-            Path uploadPath = Paths.get("./uploads/avatars");
-            
-            if (!Files.exists(uploadPath)) {
-                Files.createDirectories(uploadPath);
-            }
+        String imageUrl = cloudinaryService.uploadImage(file, user.getId().toString());
+        
+        User existingUser = repository.findById(user.getId())
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        existingUser.setImageUrl(imageUrl);
+        repository.save(existingUser);
 
-            Path filePath = uploadPath.resolve(fileName);
-            Files.copy(file.getInputStream(), filePath);
-
-            String imageUrl = "/uploads/avatars/" + fileName;
-            
-            User existingUser = repository.findById(user.getId())
-                    .orElseThrow(() -> new RuntimeException("User not found"));
-            existingUser.setImageUrl(imageUrl);
-            repository.save(existingUser);
-
-            return imageUrl;
-        } catch (IOException e) {
-            throw new RuntimeException("Could not save image file", e);
-        }
+        return imageUrl;
     }
+
     @Transactional(readOnly = true)
     public List<String> getMyAvatars(User user) {
-        try {
-            Path uploadPath = Paths.get("./uploads/avatars");
-            if (!Files.exists(uploadPath)) return Collections.emptyList();
-
-            String prefix = "u_" + user.getId() + "_";
-            try (Stream<Path> stream = Files.list(uploadPath)) {
-                return stream
-                        .filter(file -> !Files.isDirectory(file))
-                        .map(Path::getFileName)
-                        .map(Path::toString)
-                        .filter(name -> {
-                            // Either it's the user's prefixed file, OR it's a legacy file (no u_ prefix)
-                            return name.startsWith(prefix) || !name.startsWith("u_");
-                        })
-                        .map(name -> "/uploads/avatars/" + name)
-                        .collect(Collectors.toList());
-            }
-        } catch (IOException e) {
-            return Collections.emptyList();
-        }
+        // Return current image. Cloudinary list/search requires extra complexity.
+        User existingUser = repository.findById(user.getId())
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        return existingUser.getImageUrl() != null ? List.of(existingUser.getImageUrl()) : Collections.emptyList();
     }
 }
